--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=databaseName
+DB_USERNAME=databaseUername
+DB_PASSWORD=databasePassword
 
 API_PORT = 3000
