--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "app.js",
     "scripts": {
         "dev": "nodemon app.js",
+        "key": "node secretKeyGenerate.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -18,7 +19,8 @@
         "jsonwebtoken": "^9.0.2",
         "knex": "^3.1.0",
         "mysql2": "^2.3.0",
-        "sequelize": "^6.6.5"
+        "sequelize": "^6.6.5",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
