--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ DB_DATABASE=databaseName
 DB_USERNAME=databaseUername
 DB_PASSWORD=databasePassword
 
+BASE_URL=http://localhost:3000
 API_PORT = 3000
