--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "crypto-js": "^4.2.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^2.3.0",
-        "sequelize": "^6.6.5",
-        "uuid": "^9.0.1"
+        "sequelize": "^6.6.5"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
