--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^2.3.0",
-        "sequelize": "^6.6.5"
+        "sequelize": "^6.35.2",
+        "sequelize-auto-migrations": "^1.0.3"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
